14Jun99=======================================================================
1. changed IO::File in help and apropos to IO::File
2. added a check for isa('DXNode') for PC50s
08Jun99=======================================================================
1. Started work on the curses based operator console.
03Jun99=======================================================================
1. cluster seems to have a memory leak, put DESTROY functions in where 
appropriate.
2. try to make sure that PC21 commands are not issued inappropriately and
also reformat PC19 for onward broadcast so that nodes coming in on loops are
dropped from those broadcasts.
3. make sure PC16,17,19,21 doen't affect locally connected nodes.
4. Changed all instances of FileHandle to IO::File.
01Jun99=======================================================================
1. removed a output of an unwanted pc21 for isolated nodes
31May99=======================================================================
1. Added checking for PC16,17,19 and 21 to make sure that they come in from
the channels that they are supposed to.
2. Pass the RCMDing node's priv level to the command (rather than the 
connecting node's privilege level).
3. Pass thru merge requests for other nodes.
4. Removed a warning from client.pl
5. routed external DB commands and drop them (for now) locally
6. routed external mail commands (ie those addressed elsewhere)
7. routed external PC26/27 lines 
25May99=======================================================================
1. try to make the lastin value correct even for local users
2. got rid of the stupid bug that failed to print out the offline message
but put a "*main::STDOUTmain" for every line of that message instead.
3. Ported to 5.00503 (well actually just installed it and it just runs). 
4. Added who command
23May99=======================================================================
1. Got rid of some of the useless error messages on global destruction when